added manual test_details phase

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,6 +25,13 @@ test_manifestoR:
     - echo $MANIFESTOAPIKEY > tests/manifesto_apikey.txt
     - R --vanilla -e "library(devtools); library(withr); withr::with_libpaths('~/.Rlib-dev', { document(); library(testthat); results <- test(reporter = 'stop'); results; session_info(); })"
 
+test_details_manifestoR:
+  stage: test_details
+  script:
+    - echo $MANIFESTOAPIKEY > tests/manifesto_apikey.txt
+    - R --vanilla -e "library(devtools); library(withr); withr::with_libpaths('~/.Rlib-dev', { document(); library(testthat); results <- test(reporter = 'check'); results; session_info(); })"
+  when: manual
+
 pack_manifestoR:
   dependencies:
     - compile_vignette
@@ -45,5 +52,6 @@ pack_manifestoR:
 stages:
   - prepare
   - test
+  - test_details
   - vignette
   - pack
